--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.TiendaApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.OrdersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ProductsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.CategoriesActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.UsersActivity" />
     </application>
 
 </manifest>
