--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,13 +16,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.AddCategoryView"
+            android:exported="false" />
+        <activity
             android:name=".view.OrdersActivity"
             android:exported="false" />
         <activity
             android:name=".view.ProductsActivity"
             android:exported="false" />
         <activity
-            android:name=".view.CategoriesActivity"
+            android:name=".view.CategoriesListView"
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
@@ -33,7 +38,5 @@
         </activity>
         <activity android:name=".view.UsersActivity" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
 
 </manifest>
