añadido lista usuarios y añadir usuarios con mapbox

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +17,9 @@
         android:theme="@style/Theme.TiendaApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".view.AddUserView"
+            android:exported="false" />
         <activity
             android:name=".view.AddTicketView"
             android:exported="false" />
@@ -42,7 +47,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.UsersActivity" />
+        <activity android:name=".view.UsersView" />
+        <meta-data
+            android:name="com.mapbox.common.module.telemetry"
+            android:value="false" />
     </application>
 
 </manifest>
