--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,35 @@
-# Gradle files
+# ============ GRADLE ============ #
 .gradle/
 build/
-
-# Local configuration file (sdk path, etc)
 local.properties
-
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
+gradle.properties
+settings.gradle.kts
 output.json
 
-# IntelliJ
-*.iml
+# ============ IDE FILES ============ #
 .idea/
+*.iml
 misc.xml
 deploymentTargetDropDown.xml
 render.experimental.xml
 
-# Keystore files
+# ============ ANDROID STUDIO GENERATED ============ #
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+*.hprof
+
+# ============ LOGS ============ #
+*.log
+
+# ============ SECRETS ============ #
 *.jks
 *.keystore
-
-# Google Services (e.g. APIs or Firebase)
 google-services.json
 
-# Android Profiling
-*.hprof
+# ============ DEVELOPER CONFIG (custom) ============ #
+*.config.xml
+*.config.json
+*.env
+TiendaAppAA.git/
